<resources>
    <string name="app_name">Time Tracking App</string>
    <string name="time_tracking_title">Time Tracking</string>
    <string name="header_task">Task</string>
    <string name="header_description">Description</string>
    <string name="header_time">Time</string>
    <string name="loading">Loading…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task_name_hint">Task Name</string>
    <string name="add_task_desc_hint">Description</string>
    <string name="add_task_button_text">Start Timer</string>
    <string name="empty_text_error">Text fields can\'t be empty</string>
    <string name="end_task_button_text">Finish Task</string>
    <string name="zero_time">00:00:00</string>
    <string name="subject">Tasks List</string>
</resources>