<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    tools:context=".presentation.timetracking.AddTaskDialogFragment">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_16"
        android:hint="@string/add_task_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_16"
        android:hint="@string/add_task_desc_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="4" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_16"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        android:text="@string/zero_time" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_button_text" />

    <Button
        android:id="@+id/button_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_task_button_text"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>